static/css/style.css
html,
body {
  width: 100%;
  margin: 0px;
  padding: 0px;
  font-family: "Open Sans", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Playfair Display", serif;
  color: #383838;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 2.56rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

.container {
  width: 95%;
}

/* Flashes */
.flashes h3 {
  line-height: 4;
}

/* Modal */

.modal-content-container {
  margin: 30px;
}

/* Navigation Styling */
.navigation-bar {
  width: 90%;
  margin: 0 auto;
  font-family: "Open Sans";
}

.nav-wrapper {
  padding-left: 30px;
  padding-right: 30px;
}

.logo {
  height: 50px;
}

#sign-in-btn {
  color: #383838;
}

.view-btn {
  color: #383838;
}

.collapsible-header .btn {
  margin: 5px;
}

/* Mobile Menu */

#mobile-demo {
  padding-top: 50px;
}

#mobile-demo li {
  padding: 10px;
}

/* Homepage */

/* Main Image */

.main-image-row {
  margin-top: 50px;
}

.main-image {
  position: relative;
  text-align: center;
}

#main-image-text {
  position: absolute;
  top: 8px;
  left: 15px;
  margin-left: 20px;
  margin-top: 20px;
  margin-right: 70px;
  background-color: rgba(255, 255, 255, 0.7);
  padding: 10px 20px;
}

#main-image-text h1 {
  margin-bottom: 15px;
  margin-top: 15px;
}

#main-image-text h2 {
  font-size: 2rem;
  margin-top: 0px;
}

/* Side Image */

.homepage-sml-img {
  position: relative;
  text-align: center;
}

.small-image-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(255, 255, 255, 0.9);
}

.small-image-text h3 {
  margin: 5px;
  padding: 5px;
}

#bottom-right-image {
  margin-top: 15px;
}

/* Homepage - About Section */

.about-container{
  display: inline-flex;
  width: 100%;
  margin: 50px 0px;
}

.about-col,
.about-meatbox-col {
  height: 100%;
    max-height: 400px;
    margin: auto;
    width: 75%;
}

.about-btn {
    margin-bottom: 20px;
}


.recipe-of-month {
  margin-bottom: 70px;
}

.recipe-of-month-image {
  max-height: 600px;
}

.submit-recipe-section {
  padding: 50px 30px;
  background-color: #eeeeee;
  margin-bottom: 50px;
}

footer {
  background-color: #fb9496;
  width: 90%;
  margin: 0 auto;
  font-family: "Open Sans";
  margin-top: 100px;
}

/* Find A Recipe Page */

.recipes h5 {
  color: white;
}

/* View Recipe Page */

#recipe-by {
  padding: 20px 0px;
}

/* Media Queries */

@media only screen and (max-width: 768px) {
  .main-image-row {
    margin-top: 30px;
    margin-bottom: 0px;
  }
  #main-image-text h1 {
    font-size: 2.3rem;
    margin-top: 5px;
    margin-bottom: 5px;
  }

  #main-image-text h2 {
    font-size: 1.5rem;
    margin-bottom: 10px;
  }

  .small-image-text h3 {
    font-size: 1rem;
  }

  .homepage-sml-img {
    margin-top: 15px;
  }

  /* View Recipe Page */

  .recipe_details {
    display: flex;
    flex-direction: column;
  }
  .recipe-image {
    order: 1;
  }

  .recipe-info-text {
    order: 2;
  }
}

